module-5/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: cafe.ing.demo.k8s.local
    http:
      paths:
      - path: /coffee
        pathType: Prefix
        backend:
          service:
            name: coffee
            port:
              number: 80
      - path: /tea
        pathType: Prefix
        backend:
          service:
            name: tea
            port:
              number: 80
